# coinbase

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs
src/advanced/common/: authentication.rs  mod.rs
src/advanced/rest/: accounts.rs  fees.rs  mod.rs  orders.rs  products.rs
src/common/: authentication.rs  mod.rs  rate_limit.rs  types.rs
src/exchange/common/: authentication.rs  mod.rs  rate_limit.rs  types.rs
src/exchange/rest/: mod.rs  products.rs
src/exchange/websocket/channels/: level_three.rs  mod.rs
src/rest/: mod.rs  products.rs
src/websocket/: full.rs  level_three.rs  mod.rs  rate_limits.rs  types.rs
src/websocket/channels/: level_three.rs  mod.rs
