[package]
name = "coinbase"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "parking_lot",
] }

# Types
bigdecimal = { version = "0.4.6", features = ["serde-json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.11.0", features = ["serde"] }

# Cryptography
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"

# API
hyper = "1.5.1"
hyper-util = "0.1.10"
http-body-util = "0.1.2"
reqwest = "0.12.9"
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }

[dev-dependencies]
dotenvy = "0.15.7"
