[package]
name = "coinbase"
version = "0.1.0"
edition = "2021"

[dependencies]
# Types
bigdecimal = { version = "0.4.7", features = ["serde-json"] }
rustls-pki-types = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.133" }
smartstring = { version = "1.0.1", features = ["serde"] }
time = { version = "0.3.37", features = ["serde", "formatting", "parsing"] }
uuid = { version = "1.11.0", features = ["serde"] }
webpki-roots = "0.26.7"

# Cryptography
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"

# API
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
hyper = "1.5.1"
hyper-util = "0.1.10"
http-body-util = "0.1.2"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "parking_lot",
] }
tokio-rustls = "0.26.1"

[dev-dependencies]
dotenvy = "0.15.7"
convert_case = "0.6.0"
