[package]
name = "coinbase"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { version = "0.22.1" }
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
hmac = { version = "0.12.1" }
http-body-util = { version = "0.1.3" }
hyper = { version = "1.8.1" }
hyper-util = { version = "0.1.19" }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto", "use_pem"] }
keyring = { version = "3.6.3", features = ["apple-native"] }
mule = { path = "../mule" }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
rand = { version = "0.9.2" }
reqwest = { version = "0.12.24" }
rust_decimal = { version = "1.39.0", features = ["serde-with-float"] }
rustls-pki-types = { version = "1.13.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
sha2 = { version = "0.10.9" }
smartstring = { version = "1.0.1", features = ["serde"] }
time = { version = "0.3.44", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "net",
    "macros",
    "parking_lot",
] }
tokio-rustls = { version = "0.26.4" }
tracing = { version = "0.1.43" }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
webpki-roots = { version = "1.0.4" }

[dev-dependencies]
dotenvy = { version = "0.15.7" }
sqlx = { version = "0.8.6", features = [
    "json",
    "postgres",
    "runtime-tokio-native-tls",
    "rust_decimal",
    "time",
    "uuid",
] }
telemetry = { path = "../telemetry" }
